--- a/Smart_Home_Intercom_System.ipynb
+++ b/Smart_Home_Intercom_System.ipynb
@@ -7,7 +7,12 @@
    "source": [
     "# Smart Home Intercom System\n",
     "\n",
-    "I want to develop a Smart Home Intercom system"
+    "I want to develop a smart home intercom system\n",
+    "\n",
+    "Door Intercom systems are security systems that are commonly installed in buildings, e.g., Company buildings, villas, apartment suites etc.\n",
+    "\n",
+    "In this study case, an Embedded System is used as a \"Host\" for the intercom and as a chatbot server for this system.\n",
+    "The chatbot server controls door locks, buzzers, cameras, "
    ]
   }
  ],
