--- a/Robot_Arm_Navigation_Research.ipynb
+++ b/Robot_Arm_Navigation_Research.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "Robot navigation means the robot's ability to determine its own position in its frame of reference and then to its destination path/towards some goal location.\n",
     "\n",
-    "The unit is generally composed of 6 joints (6 axes). Six-axis robots are the standard and have a full range of motion, that closely resembles a human arm.It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints. "
+    "The unit is generally composed of 6 joints (6 axes). Six-axis robots are the standard and have a full range of motion, that closely resembles a human arm.\n",
+    "It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints. "
    ]
   }
  ],
