--- a/Robot_Arm_Navigation_Research.ipynb
+++ b/Robot_Arm_Navigation_Research.ipynb
@@ -19,7 +19,9 @@
     "Robot navigation means the robot's ability to determine its own position in its frame of reference and then to its destination path/towards some goal location.\n",
     "\n",
     "The unit is generally composed of 6 joints (6 axes). Six-axis robots are the standard and have a full range of motion, that closely resembles a human arm.\n",
-    "It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints. "
+    "It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints.\n",
+    "\n",
+    "![Model](https://www.mathworks.com/help/examples/fuzzy/win64/invkine_codepad_01.png)"
    ]
   }
  ],
