--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robot Arm - Navigation\n",
+    "# Robotic Arm\n",
     "\n"
    ]
   },
@@ -16,12 +16,12 @@
    "source": [
     "A [Robotic arm](https://en.wikipedia.org/wiki/Robotic_arm) is a type of mechanical arm, usually programmable, with similar characteristics of a human arm. The purpose of the robot is to replace the human in difficult and harmful tasks e.g., Industrial production, processing and manufacturing roles. Any task in which extremely precise, fast and repeatable movements are required as well as to automate the process of doing the daily task that humans typically do.\n",
     "\n",
-    "[Robot navigation](https://en.wikipedia.org/wiki/Robot_navigation) means the robot's ability to determine its own position in its frame of reference and then to its destination path/towards some goal location.\n",
+    "The [arm](https://www.universal-robots.com/in/blog/working-of-robotic-arm/#:~:text=Robotic%20arms%20refer%20to%20a,degrees%20of%20freedom%20of%20movement) \n",
+    "contains multiple joints that act as axes that enable a degree of movement. Six-axis robots are the standard and have a full range of motion. It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints. The different joints makes it possible for the robot to move freely in certain required degrees. Likewise, the larger quantity of rotary joints a robotic arm features, the more freedom of movement it has. To manipulate, we use the links that are connected by joints allowing rotational motion or translational displacement.\n",
     "\n",
-    "The [unit](https://www.universal-robots.com/in/blog/working-of-robotic-arm/#:~:text=Robotic%20arms%20refer%20to%20a,degrees%20of%20freedom%20of%20movement) is generally composed of 6 joints (6 axes). Six-axis robots are the standard and have a full range of motion, that closely resembles a human arm.\n",
-    "It's structured with a shoulder, an elbow and a wrist and even finger tips. There are more robots with more than 6 joints. The different joints makes it possible for the robot to move freely in certain required degrees. To manipulate, we use the links that are connected by joints allowing rotational motion or translational displacement.\n",
+    "![Model](https://www.mathworks.com/help/examples/fuzzy/win64/invkine_codepad_01.png)\n",
     "\n",
-    "![Model](https://www.mathworks.com/help/examples/fuzzy/win64/invkine_codepad_01.png)"
+    "In additional to [rotary joints](https://www.intel.in/content/www/in/en/robotics/robotic-arm.html#:~:text=In%20addition%20to%20rotary%20joints,power%20systems%2C%20and%20software%20components.), robotic arm components include the robot controller, an end-of-arm tool, actuators, sensors, vision systems, power systems, and software components.\n"
    ]
   }
  ],
