--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -29,14 +29,22 @@
     "\n",
     "A rotation is represented in a matrix. In Cartesian space ![Cartesian space](https://www.tthk.ee/inlearcs/wp-content/uploads/2020/09/7.gif)\n",
     "\n",
-    "a robot orientation is decided by a combinations of rottions in X, Y and Z direction, and we can have a 3-by-3 rotation matrix for each orientation.\n",
+    "a robot orientation is decided by a combinations of rotations in X, Y and Z direction, and we can have a 3-by-3 rotation matrix for each orientation.\n",
     "\n",
     "$$ R = \\begin{bmatrix}\n",
     "    \\ r11 & \\ r12 & \\ r13 \\\\\n",
     "    \\ r21 & \\ r22 & \\ r23 \\\\\n",
     "    \\ r31 & \\ r32 & \\ r33\n",
     "    \\end{bmatrix}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "The __axis-angle__ representation is used for robot __orientation__. _Let's say_, we want the angle to point to a _certain_ __direction__, we use a so called __direction vector__. Around the vector, an orientation can be rotated by a certain angle, _theta_. As a result of rotation, we can have a different orientation. The axis-angle representation is useful for robotics calculation such as kinematics and dynamics.\n",
+    "\n",
+    "$$ \\dotsm U_Vector = \\begin{bmatrix}\n",
+    "            \\ ux \\\\\n",
+    "            \\ uy \\\\\n",
+    "            \\ u\\approx \\\\\n",
+    "            \\end{bmatrix}"
    ]
   }
  ],
