--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "The __axis-angle__ representation is used for robot __orientation__. _Let's say_, we want the angle to point to a _certain_ __direction__, we use a so called __direction vector__. Around the vector, an orientation can be rotated by a certain angle, _theta_. As a result of rotation, we can have a different orientation. The axis-angle representation is useful for robotics calculation such as kinematics and dynamics.\n",
     "\n",
-    "$$ \\dotsm U_Vector = \\begin{bmatrix}\n",
+    "$$ U_Vector = \\begin{bmatrix}\n",
     "            \\ ux \\\\\n",
     "            \\ uy \\\\\n",
     "            \\ u\\approx \\\\\n",
