--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "In additional to [rotary joints](https://www.intel.in/content/www/in/en/robotics/robotic-arm.html#:~:text=In%20addition%20to%20rotary%20joints,power%20systems%2C%20and%20software%20components.), robotic arm components include the robot controller, an end-of-arm tool, actuators, sensors, vision systems, power systems, and software components.\n",
     "\n",
-    "# Rotation with the help of Rotation Matrices\n",
+    "# Rotation with the help of Inverse Kinematics\n",
     "\n",
-    "A Robot Arm has position and orientation to be able to adapt to movements and perform its job effectively. It is the position of something in relation to its surroundings with different diversity. \n",
+    "A Robot Arm has position and orientation to be able to adapt to movements and perform its job effectively. It is the position of something in relation to its surroundings with different diversity.\n",
     "\n",
     "A rotation is represented in a matrix. In Cartesian space ![Cartesian space](https://www.tthk.ee/inlearcs/wp-content/uploads/2020/09/7.gif)\n",
     "\n",
@@ -45,7 +45,13 @@
     "            \\ uy \\\\\n",
     "            \\ u\\approx \\\\\n",
     "            \\end{bmatrix}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "We will use [Inverse kinematics](https://www.mathworks.com/discovery/inverse-kinematics.html#:~:text=Inverse%20kinematics%20is%20the%20use,between%20bins%20and%20manufacturing%20machines) equations to determine the motion of a robot to reach a desired position.\n",
+    "\n",
+    "For _example_, in order to perform automated bin picking, a robotic arm needs precise motion from an initial position to a desired position between the target position and the robot.\n",
+    "\n",
+    "![Inverse kinematics](https://www.alanzucconi.com/wp-content/uploads/2017/03/ik1.gif)"
    ]
   }
  ],
