--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -21,37 +21,16 @@
     "\n",
     "![Model](https://www.mathworks.com/help/examples/fuzzy/win64/invkine_codepad_01.png)\n",
     "\n",
-    "In additional to [rotary joints](https://www.intel.in/content/www/in/en/robotics/robotic-arm.html#:~:text=In%20addition%20to%20rotary%20joints,power%20systems%2C%20and%20software%20components.), robotic arm components include the robot controller, an end-of-arm tool, actuators, sensors, vision systems, power systems, and software components.\n",
+    "# Problem 1: Accuracy\n",
     "\n",
-    "# Rotation with the help of Inverse Kinematics\n",
+    "A Robot Arm has position and orientation to be able to adapt to movements and perform its job effectively. It is the position of something in relation to its surroundings with different diversity. \n",
     "\n",
-    "A Robot Arm has position and orientation to be able to adapt to movements and perform its job effectively. It is the position of something in relation to its surroundings with different diversity.\n",
+    "The accuracy issue is based on the object's displacement from the target area after a series of repeated movements by the arm. It could be error in accuracy along the X or Y-axis due to delay, etc.\n",
     "\n",
-    "A rotation is represented in a matrix. In Cartesian space ![Cartesian space](https://www.tthk.ee/inlearcs/wp-content/uploads/2020/09/7.gif)\n",
+    "We can measure the error by:\n",
+    "- Using coordinate system by comparing the object's displacement from the target position (origo). For every repitition, the displacement in both x & y directions are seen.\n",
     "\n",
-    "a robot orientation is decided by a combinations of rotations in X, Y and Z direction, and we can have a 3-by-3 rotation matrix for each orientation.\n",
-    "\n",
-    "$$ R = \\begin{bmatrix}\n",
-    "    \\ r11 & \\ r12 & \\ r13 \\\\\n",
-    "    \\ r21 & \\ r22 & \\ r23 \\\\\n",
-    "    \\ r31 & \\ r32 & \\ r33\n",
-    "    \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "The __axis-angle__ representation is used for robot __orientation__. _Let's say_, we want the angle to point to a _certain_ __direction__, we use a so called __direction vector__. Around the vector, an orientation can be rotated by a certain angle, _theta_. As a result of rotation, we can have a different orientation. The axis-angle representation is useful for robotics calculation such as kinematics and dynamics.\n",
-    "\n",
-    "$$ \\dotsm U_Vector = \\begin{bmatrix}\n",
-    "            \\ ux \\\\\n",
-    "            \\ uy \\\\\n",
-    "            \\ u\\approx \\\\\n",
-    "            \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "We will use [Inverse kinematics](https://www.mathworks.com/discovery/inverse-kinematics.html#:~:text=Inverse%20kinematics%20is%20the%20use,between%20bins%20and%20manufacturing%20machines) equations to determine the motion of a robot to reach a desired position.\n",
-    "\n",
-    "For _example_, in order to perform automated bin picking, a robotic arm needs precise motion from an initial position to a desired position between the target position and the robot.\n",
-    "\n",
-    "![Inverse kinematics](https://www.alanzucconi.com/wp-content/uploads/2017/03/ik1.gif)"
+    "X & Y are measured in millimeters"
    ]
   }
  ],
