--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -19,7 +19,7 @@
     "The [arm](https://www.intel.com/content/www/us/en/robotics/robotic-arm.html#:~:text=Most%20industrial%20robotic%20arms%20use,power%20systems%2C%20and%20software%20components) \n",
     "contains:\n",
     "- __Motors and gears__ that allow arm to rotate/move in different directions.\n",
-    "- __Joints__ that consists of sevral joints.\n",
+    "- __Joints__ that consists of several joints.\n",
     "- __Links__ are the rigid segments that connect the joints.\n",
     "- __End-effector__ is the device that is attached to the arm's last link e.g., grippers to pick up items.\n",
     "- __Sensors__, such as cameras, force sensors, or proximity sensors, which allow the arm to sense and respond to its environment.\n",
@@ -34,9 +34,14 @@
     "The accuracy issue is based on the object's displacement from the target area after a series of repeated movements by the arm. It could be error in accuracy along the X or Y-axis due to sensor errors, design, mechanical wear and tear, control algorithms etc.\n",
     "\n",
     "We can measure the error by:\n",
-    "- Using [coordinate system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the object's __displacement__ from the __target__ position (__origo__) to see the _displacement_ in both x & y directions.\n",
+    "- [Euclidean system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the object's __displacement__ from the __target__ position (__origo__) to see the _displacement_ in both x & y directions.\n",
     "\n",
-    "__X & Y__ can be measured in __millimeters__, __centimeters__ or __inches__, depending on the application and the precision __required__. Robotic arms are required to be __highly__ precise, with __accuracy__ levels measured in _millimeter_ or even _microns_."
+    "Calculation for accuracy in Eucledian system can be shown like this:\n",
+    "$$ AP_p = {\\sqrt{(x-x)^2+(x-x)^2}} $$\n",
+    "\n",
+    "- [Matrices] \n",
+    "\n",
+    "__X & Y__ can be measured in __millimeters__, __centimeters__ or __inches__, depending on the application and the precision __required__. Robotic arms are required to be __highly__ precise, with __accuracy__ levels measured in _millimeter_ or even _microns_.\n"
    ]
   }
  ],
