--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -34,14 +34,60 @@
     "The accuracy issue is based on the object's displacement from the target area after a series of repeated movements by the arm. It could be error in accuracy along the X or Y-axis due to sensor errors, design, mechanical wear and tear, control algorithms etc.\n",
     "\n",
     "We can measure the error by:\n",
-    "- [Euclidean system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the object's __displacement__ from the __target__ position (__origo__) to see the _displacement_ in both x & y directions.\n",
+    "- [Euclidean system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the __position__ and __orientation__ of the end-effector to the target position and orientation to see the _displacement_ in both __x & y__ directions.\n",
     "\n",
     "Calculation for accuracy in Eucledian system can be shown like this:\n",
-    "$$ AP_p = {\\sqrt{(x-x)^2+(x-x)^2}} $$\n",
+    "$$ AP_p = {\\sqrt{(\\bar{x}-x_c)^2+(\\bar{y}-y_c)^2}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (3741446916.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Define the target point in 3D space\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "#include <iostream>\n",
+    "#include <cmath>\n",
     "\n",
-    "- [Matrices] \n",
+    "using namespace std;\n",
     "\n",
-    "__X & Y__ can be measured in __millimeters__, __centimeters__ or __inches__, depending on the application and the precision __required__. Robotic arms are required to be __highly__ precise, with __accuracy__ levels measured in _millimeter_ or even _microns_.\n"
+    "// Function to calculate the Euclidean distance between two points\n",
+    "double euclidean_distance(double x1, double y1, double z1, double x2, double y2, double z2) {\n",
+    "    return sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2) + pow(z1 - z2, 2));\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    // Define the target point in 3D space\n",
+    "    double target_x = 10.0;\n",
+    "    double target_y = 5.0;\n",
+    "    double target_z = 7.0;\n",
+    "    \n",
+    "    // Move the robot arm to the target point and record the measured point\n",
+    "    double measured_x = 9.8;\n",
+    "    double measured_y = 4.9;\n",
+    "    double measured_z = 7.2;\n",
+    "    \n",
+    "    // Calculate the Euclidean distance between the target point and the measured point\n",
+    "    double distance = euclidean_distance(target_x, target_y, target_z, measured_x, measured_y, measured_z);\n",
+    "    \n",
+    "    // Output the distance as a measure of the accuracy of the robot arm\n",
+    "    cout << \"Distance: \" << distance << endl;\n",
+    "    \n",
+    "    return 0;\n",
+    "}\n"
    ]
   }
  ],
