--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -25,8 +25,6 @@
     "- __Sensors__, such as cameras, force sensors, or proximity sensors, which allow the arm to sense and respond to its environment.\n",
     "- __Control system__ is the brain of the robotic arm, which directs the movement and operation of the arm. It is commonly run in a computer, software, and control electronics.\n",
     "\n",
-    "![Model](https://www.mathworks.com/help/examples/fuzzy/win64/invkine_codepad_01.png)\n",
-    "\n",
     "# Problem 1: Accuracy\n",
     "\n",
     "The accuracy of a robot arm in terms of position and orientation refers to how precisely the arm can move to a specific location and how accurately it can orient its end-effector in a particular direction. This accuracy is typically measured repeatedly along with its positional accuracy.\n",
@@ -34,60 +32,28 @@
     "The accuracy issue is based on the object's displacement from the target area after a series of repeated movements by the arm. It could be error in accuracy along the X or Y-axis due to sensor errors, design, mechanical wear and tear, control algorithms etc.\n",
     "\n",
     "We can measure the error by:\n",
-    "- [Euclidean system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the __position__ and __orientation__ of the end-effector to the target position and orientation to see the _displacement_ in both __x & y__ directions.\n",
+    "- [Euclidean system](https://www.kth.se/polopoly_fs/1.1078075.1622113235!/gr22rapport2021-02.pdf) by comparing the __position__ and __orientation__ of the end-effector to the target position and orientation to see the _displacement_ in both __x, y & z__ directions.\n",
+    "\n",
+    "![Model](https://i.pcmag.com/imagery/encyclopedia-terms/x-y-z-matrix-xymatrix.fit_lim.size_1050x.gif)\n",
+    "\n",
+    "measured along:\n",
+    "\n",
+    "x = eastwest axis\n",
+    "\n",
+    "y = northsouth axis\n",
+    "\n",
+    "z = height/elevation\n",
     "\n",
     "Calculation for accuracy in Eucledian system can be shown like this:\n",
-    "$$ AP_p = {\\sqrt{(\\bar{x}-x_c)^2+(\\bar{y}-y_c)^2}} $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (3741446916.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Define the target point in 3D space\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
-     ]
-    }
-   ],
-   "source": [
-    "#include <iostream>\n",
-    "#include <cmath>\n",
+    "$$ AP_p = {\\sqrt{(\\bar{x}-x_c)^2+(\\bar{y}-y_c)^2+(\\bar{z}-z_c)^2}} $$\n",
     "\n",
-    "using namespace std;\n",
+    "Example of table _positions_ of x, y & z:\n",
     "\n",
-    "// Function to calculate the Euclidean distance between two points\n",
-    "double euclidean_distance(double x1, double y1, double z1, double x2, double y2, double z2) {\n",
-    "    return sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2) + pow(z1 - z2, 2));\n",
-    "}\n",
-    "\n",
-    "int main() {\n",
-    "    // Define the target point in 3D space\n",
-    "    double target_x = 10.0;\n",
-    "    double target_y = 5.0;\n",
-    "    double target_z = 7.0;\n",
-    "    \n",
-    "    // Move the robot arm to the target point and record the measured point\n",
-    "    double measured_x = 9.8;\n",
-    "    double measured_y = 4.9;\n",
-    "    double measured_z = 7.2;\n",
-    "    \n",
-    "    // Calculate the Euclidean distance between the target point and the measured point\n",
-    "    double distance = euclidean_distance(target_x, target_y, target_z, measured_x, measured_y, measured_z);\n",
-    "    \n",
-    "    // Output the distance as a measure of the accuracy of the robot arm\n",
-    "    cout << \"Distance: \" << distance << endl;\n",
-    "    \n",
-    "    return 0;\n",
-    "}\n"
+    "<!-- Tables -->\n",
+    "| $X-Position$ | $Y-Position$ |\n",
+    "| -----| ------|\n",
+    "| $X1 = 10.0$ | $Y1$ |\n",
+    "| $X2 = 9.8$| $Y2$ |\n"
    ]
   }
  ],
