--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -45,15 +45,30 @@
     "z = height/elevation\n",
     "\n",
     "Calculation for accuracy in Eucledian system can be shown like this:\n",
-    "$$ AP_p = {\\sqrt{(\\bar{x}-x_c)^2+(\\bar{y}-y_c)^2+(\\bar{z}-z_c)^2}} $$\n",
+    "$$ AP_p = {\\sqrt[2]{(\\bar{x1}-x2_c)^2+(\\bar{y1}-y2_c)^2+(\\bar{z1}-z2_c)^2}} $$\n",
     "\n",
     "Example of table _positions_ of x, y & z:\n",
     "\n",
-    "<!-- Tables -->\n",
-    "| $X-Position$ | $Y-Position$ |\n",
-    "| -----| ------|\n",
-    "| $X1 = 10.0$ | $Y1$ |\n",
-    "| $X2 = 9.8$| $Y2$ |\n"
+    "<!-- Target Position Table -->\n",
+    "| $X-Target$ | $Y-Target$ | $Z-Target$ |\n",
+    "| -----| ------| ------|\n",
+    "| $X1 = 10.0$ | $Y1 = 6.0$ | $Z1 = 4.0$ |\n",
+    "-\n",
+    "<!-- Starting Position Table -->\n",
+    "| $X-Measured$ | $Y-Measured$ | $Measured$ |\n",
+    "| -----| ------| ------|\n",
+    "| $X2 = 9.8$ | $Y2 = 6.1$ | $Z2 = 4.2$ |\n",
+    "\n",
+    "Where $\\bar{x1}-x2_c, \\bar{y1}-y2_c, \\bar{z1}-z2_c$ is the error along the x, y and z-axis.\n",
+    "\n",
+    "$ Calculation: $\n",
+    "$$ AP_p = {\\sqrt[2]{(\\bar{10.0}-9.8_c)^2+(\\bar{6.0}-6.1_c)^2+(\\bar{4.0}-4.2_c)^2}} $$\n",
+    "\n",
+    "We get the following value:\n",
+    "\n",
+    "$$ 0.04 + 0.01 + 0.04 = 0,09$$\n",
+    "\n",
+    "Square root of 2 = $${\\sqrt[2]{0,09}} => 0.3$$"
    ]
   }
  ],
