--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -25,6 +25,34 @@
     "- __Sensors__, such as cameras, force sensors, or proximity sensors, which allow the arm to sense and respond to its environment.\n",
     "- __Control system__ is the brain of the robotic arm, which directs the movement and operation of the arm. It is commonly run in a computer, software, and control electronics.\n",
     "\n",
+    "# Control robot arm through a mobile application\n",
+    "In this code, the signals that are sent from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Function to read signals from mobile app (replace with actual code)\n",
+    "int read_signals_from_mobile_app() {\n",
+    "    // For example, if the signals are sent as a binary string\n",
+    "    string signals_str = \"1010\"; // Up and right signals are active\n",
+    "    int signals = stoi(signals_str, nullptr, 2);\n",
+    "    return signals;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Problem 1: Accuracy\n",
     "\n",
     "The accuracy of a robot arm in terms of position and orientation refers to how precisely the arm can move to a specific location and how accurately it can orient its end-effector in a particular direction. This accuracy is typically measured repeatedly along with its positional accuracy.\n",
@@ -44,8 +72,10 @@
     "\n",
     "z = height/elevation\n",
     "\n",
-    "Calculation for accuracy in Eucledian system can be shown like this:\n",
+    "Calculation for Eculidean distance between each target point and the measure point:\n",
     "$$ AP_p = {\\sqrt[2]{(\\bar{x1}-x2_c)^2+(\\bar{y1}-y2_c)^2+(\\bar{z1}-z2_c)^2}} $$\n",
+    "\n",
+    "Code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Accuracy%20measurement/Accuracy_Euclidean.cpp)\n",
     "\n",
     "Example of table _positions_ of x, y & z:\n",
     "\n",
@@ -55,7 +85,7 @@
     "| $X1 = 10.0$ | $Y1 = 6.0$ | $Z1 = 4.0$ |\n",
     "-\n",
     "<!-- Starting Position Table -->\n",
-    "| $X-Measured$ | $Y-Measured$ | $Measured$ |\n",
+    "| $X-Measured$ | $Y-Measured$ | $Z-Measured$ |\n",
     "| -----| ------| ------|\n",
     "| $X2 = 9.8$ | $Y2 = 6.1$ | $Z2 = 4.2$ |\n",
     "\n",
@@ -68,7 +98,19 @@
     "\n",
     "$$ 0.04 + 0.01 + 0.04 = 0,09$$\n",
     "\n",
-    "Square root of 2 = $${\\sqrt[2]{0,09}} => 0.3$$"
+    "Square root of 2 = $${\\sqrt[2]{0,09}} => 0.3$$\n",
+    "\n",
+    "To calculate the average/mean distance as a measure of the accuracy of the robotic arm:\n",
+    "$$ m = \\frac{sum}{distance}$$\n",
+    "\n",
+    "Example:\n",
+    "sum = 4.5\n",
+    "$$ m = \\frac{4.5}{0.3} = 15 $$\n",
+    "__X & Y__ can be measured in __millimeters__, __centimeters__ or __inches__, depending on the application and the precision __required__. Robotic arms are required to be __highly__ precise, with __accuracy__ levels measured in _millimeter_ or even _microns_.\n",
+    "\n",
+    "Lastly, we calculate the accuracy error as the difference between the average distance and the ideal distance of e.g., __7.0__ using absolute.\n",
+    "$$ abs(15 - 7.0) $$\n",
+    "So the __accuracy error__ is: __8__"
    ]
   }
  ],
