--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -26,7 +26,32 @@
     "- __Control system__ is the brain of the robotic arm, which directs the movement and operation of the arm. It is commonly run in a computer, software, and control electronics.\n",
     "\n",
     "# Control robot arm through a mobile application\n",
-    "In this code, the signals that are sent from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2."
+    "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Logic_Controller.cpp), the __read_signals_from_moile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
+    "\n",
+    "It sends one uint16 (__2__ bytes) at a time, encoded like this:\n",
+    "- bit 0 - SIGNAL_UP\n",
+    "- bit 1 - SIGNAL_DOWN\n",
+    "- bit 2 - SIGNAL_LEFT\n",
+    "- bit 3 - SIGNAL_RIGHT\n",
+    "\n",
+    "I'm coding this using the bitwise operation (boolean algebra) to get signals in the right place. For example, the robot arm moves to the right by shifting 3 bits to the left. To switch the robot arm's position, I use bitshift and bitwise right shift. See the code below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Define the signals to control the robot arm\n",
+    "const int SIGNAL_UP    = 1 << 0; // 00000001b\n",
+    "const int SIGNAL_DOWN  = 1 << 1; // 00000010b\n",
+    "const int SIGNAL_LEFT  = 1 << 2; // 00000100b\n",
+    "const int SIGNAL_RIGHT = 1 << 3; // 00001000b"
    ]
   },
   {
