--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -26,13 +26,13 @@
     "- __Control system__ is the brain of the robotic arm, which directs the movement and operation of the arm. It is commonly run in a computer, software, and control electronics.\n",
     "\n",
     "# Control robot arm through a mobile application\n",
-    "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Logic_Controller.cpp), the __read_signals_from_moile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
+    "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Mobile%20App/Mobile_app.cpp), the __read_signals_from_moile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
     "\n",
     "It sends one uint16 (__2__ bytes) at a time, encoded like this:\n",
-    "- bit 0 - SIGNAL_UP\n",
-    "- bit 1 - SIGNAL_DOWN\n",
-    "- bit 2 - SIGNAL_LEFT\n",
-    "- bit 3 - SIGNAL_RIGHT\n",
+    "- bit __0__ - __SIGNAL_UP__\n",
+    "- bit __1__ - __SIGNAL_DOWN__\n",
+    "- bit __2__ - __SIGNAL_LEFT__\n",
+    "- bit __3__ - __SIGNAL_RIGHT__\n",
     "\n",
     "I'm coding this using the bitwise operation (boolean algebra) to get signals in the right place. For example, the robot arm moves to the right by shifting 3 bits to the left. To switch the robot arm's position, I use bitshift and bitwise right shift. See the code below."
    ]
@@ -67,9 +67,52 @@
     "// Function to read signals from mobile app (replace with actual code)\n",
     "int read_signals_from_mobile_app() {\n",
     "    // For example, if the signals are sent as a binary string\n",
-    "    string signals_str = \"1010\"; // Up and right signals are active\n",
+    "    string signals_str = \"1000\"; // Up and right signals are active\n",
     "    int signals = stoi(signals_str, nullptr, 2);\n",
     "    return signals;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The __control_robot_arm__ function takes an __integer argument__ that contains the signals and uses __bitwise__ operations to determine which signals are __active__. The function then uses __conditional statements__ to control the robot arm based on the active signals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Function to control the robot arm based on signals\n",
+    "void control_robot_arm(int signals) {\n",
+    "    // Determine which signals are active using bitwise operations\n",
+    "    bool up    = (signals & SIGNAL_UP)    != 0;\n",
+    "    bool down  = (signals & SIGNAL_DOWN)  != 0;\n",
+    "    bool left  = (signals & SIGNAL_LEFT)  != 0;\n",
+    "    bool right = (signals & SIGNAL_RIGHT) != 0;\n",
+    "\n",
+    "    // Use the signals to control the robot arm (replace with actual code)\n",
+    "    // For example, if there is a function called \"control_robot_arm(string command)\"\n",
+    "    // You could do something like this:\n",
+    "    if (up && !down && !left && !right) {\n",
+    "        cout << \"Moving robot arm up\" << endl;\n",
+    "    } else if (!up && down && !left && !right) {\n",
+    "        cout << \"Moving robot arm down\" << endl;\n",
+    "    } else if (!up && !down && left && !right) {\n",
+    "        cout << \"Moving robot arm left\" << endl;\n",
+    "    } else if (!up && !down && !left && right) {\n",
+    "        cout << \"Moving robot arm right\" << endl;\n",
+    "    } else {\n",
+    "        cout << \"Stopping robot arm\" << endl;\n",
+    "    }\n",
     "}"
    ]
   },
