--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -117,6 +117,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int main() {\n",
+    "    // Read the signals from the mobile application\n",
+    "    int signals = read_signals_from_mobile_app();\n",
+    "    cout << \"Signals received: \" << bitset<4>(signals) << endl;\n",
+    "\n",
+    "    // Control the robot arm based on the signals\n",
+    "    control_robot_arm(signals);\n",
+    "\n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:\n",
+    "\n",
+    "Signals received: 1000\n",
+    "\n",
+    "Moving robot arm right"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
