--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The __control_robot_arm__ function takes an __integer argument__ that contains the signals and uses __bitwise__ operations to determine which signals are __active__. The function then uses __conditional statements__ to control the robot arm based on the active signals."
+    "The __control_robot_arm()__ function takes an __integer argument__ that contains the signals and uses __bitwise__ operations to determine which signals are __active__. The function then uses __conditional statements__ to control the robot arm based on the active signals."
    ]
   },
   {
@@ -117,6 +117,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the __main()__ function, the program calls __read_signals_from_mobile_app()__ to read the signals from the mobile application and then calls __control_robot_arm()__ with the signals as an argument to control the robot arm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -148,6 +156,14 @@
     "Signals received: 1000\n",
     "\n",
     "Moving robot arm right"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Note:__ This is just a simple example and you would need to replace the placeholder code with actual code to read signals from a mobile application using a communication protocol such as __Bluetooth__ or __Wi-Fi__. _Additionally_, you may need to adapt this code to the specific requirements fo your robot arm and mobile application."
    ]
   },
   {
