--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -29,10 +29,10 @@
     "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Mobile%20App/Mobile_app.cpp), the __read_signals_from_moile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
     "\n",
     "It sends one uint16 (__2__ bytes) at a time, encoded like this:\n",
-    "- bit __0__ - __SIGNAL_UP__\n",
-    "- bit __1__ - __SIGNAL_DOWN__\n",
-    "- bit __2__ - __SIGNAL_LEFT__\n",
-    "- bit __3__ - __SIGNAL_RIGHT__\n",
+    "- bit __1__ - __SIGNAL_UP__\n",
+    "- bit __2__ - __SIGNAL_DOWN__\n",
+    "- bit __4__ - __SIGNAL_LEFT__\n",
+    "- bit __8__ - __SIGNAL_RIGHT__\n",
     "\n",
     "I'm coding this using the bitwise operation (boolean algebra) to get signals in the right place. For example, the robot arm moves to the right by shifting 3 bits to the left. To switch the robot arm's position, I use bitshift and bitwise right shift. See the code below."
    ]
@@ -164,6 +164,24 @@
    "metadata": {},
    "source": [
     "__Note:__ This is just a simple example and you would need to replace the placeholder code with actual code to read signals from a mobile application using a communication protocol such as __Bluetooth__ or __Wi-Fi__. _Additionally_, you may need to adapt this code to the specific requirements fo your robot arm and mobile application."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversion from A/D\n",
+    "\n",
+    "![](https://ars.els-cdn.com/content/image/3-s2.0-B9780128150719000026-f02-02-9780128150719.jpg)\n",
+    "\n",
+    "The ADC (Analog-to-Digital) is used to convert analog sensor readings, such as precise position, velocity or force, into digital signals that can be processed by the robot's control system. The DAC (Digital-to-Analog), is used to convert digital control signals from the robot's control system into analog control signals that can be sent to the robot's actuators with high precision.\n",
+    "\n",
+    "Many robotic arms use sensors i.e., encoders or force sensors, to provide feedback about the robot's position and force. ADC is used to covert these analog sensor readings into digital signals that can be processed by the robot's control system. The control system can then use the digital signals to adjust the robot's movements and maintain precise control.\n",
+    "\n",
+    "To convert to analog, I will need to use the formula for DAC with a reference voltage Vref:\n",
+    "\n",
+    "$$ Vout = {\\frac{D}{2^N}}"
    ]
   },
   {
