--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The __control_robot_arm()__ function takes an __integer argument__ that contains the signals and uses __bitwise__ operations to determine which signals are __active__. The function then uses __conditional statements__ to control the robot arm based on the active signals."
+    "The __control_robot_arm()__ function takes an __integer argument__ that contains the signals and uses __bitwise__ operations to determine which signals are __active__. The function then uses __conditional statements__ (logical operator) to control the robot arm based on the active signals."
    ]
   },
   {
@@ -179,9 +179,13 @@
     "\n",
     "Many robotic arms use sensors i.e., encoders or force sensors, to provide feedback about the robot's position and force. ADC is used to covert these analog sensor readings into digital signals that can be processed by the robot's control system. The control system can then use the digital signals to adjust the robot's movements and maintain precise control.\n",
     "\n",
-    "To convert to analog, I will need to use the formula for DAC with a reference voltage Vref:\n",
+    "![Digital Signal](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Digital-signal-noise.svg/1200px-Digital-signal-noise.svg.png)\n",
     "\n",
-    "$$ Vout = {\\frac{D}{2^N}}"
+    "![](https://cdn1.byjus.com/wp-content/uploads/2022/05/Difference-Between-Analog-And-Digital-Signal.png)\n",
+    "\n",
+    "A __digital signal__ is a signal that uses binary to represent information. The information is represented as a series of __binary__ digits or __\"bits\"__ which is made of __1s__ and __0s__.\n",
+    "\n",
+    "To convert to digital, I will need to use the formula for ADC:"
    ]
   },
   {
