--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Output:\n",
+    "__Output:__\n",
     "\n",
     "Signals received: 1000\n",
     "\n",
@@ -171,11 +171,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Navigation using __LIDAR__\n",
+    "Robot arms use a _variety_ of sensors to be able to navigate different objects. By measuring distance to various objects to detect obstacles such as walls, furnitures etc. It provides real-time monitoring and feedback to the robot arm's control system, allowing it to adjust its movements and behavior based on the environment. It also increases the autonomy of the robot arm by allowing it to navigate and operate in complex environments without human intervention. This can be particularly useful in warehousing, logistics, or manufacturing, where robots need to operate in dynamic and unpredictable environments.\n",
+    "\n",
+    "- In order to calculate the distance to the object we can use laser pulses to bounce to the object and then back to the sensor. We can use the equation to calculate the distance based on speed and time. However, since the electromagnetic waves go back and forth, we must divide by two to get the distance to the object. Here is the formula:\n",
+    "\n",
+    "$$ distance = \\frac{speed-of-light * time-of-flight} {2}  $$\n",
+    "\n",
+    "The _speed_ of __electromagnetic radiation__ is the _same_ as the __speed of light__ and the __time-of-flight__ measurement of the laser pulse: $$ 299,792,458m/s$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conversion from A/D\n",
     "\n",
     "![](https://ars.els-cdn.com/content/image/3-s2.0-B9780128150719000026-f02-02-9780128150719.jpg)\n",
     "\n",
-    "The ADC (Analog-to-Digital) is used to convert analog sensor readings, such as precise position, velocity or force, into digital signals that can be processed by the robot's control system. The DAC (Digital-to-Analog), is used to convert digital control signals from the robot's control system into analog control signals that can be sent to the robot's actuators with high precision.\n",
+    "The ADC (Analog-to-Digital) is used to convert analog sensor readings, such as precise position, velocity or force, into electrical/digital signals that can be processed by the robot's control system. The DAC (Digital-to-Analog), is used to convert digital control signals from the robot's control system into analog control signals that can be sent to the robot's actuators with high precision.\n",
     "\n",
     "Many robotic arms use sensors i.e., encoders or force sensors, to provide feedback about the robot's position and force. ADC is used to covert these analog sensor readings into digital signals that can be processed by the robot's control system. The control system can then use the digital signals to adjust the robot's movements and maintain precise control.\n",
     "\n",
